# bfc.hs

./: CHANGELOG.md  LICENSE  README.md  bfc.cabal
src/: IR.hs  Main.hs  Parser.hs  Preprocessor.hs  VM.hs
test_files/: add.bf  hello.bf
