name:                bfc
version:             0.1.0.1
author:              Aidan T. Manning
maintainer:          periodicaidan@gmail.com

synopsis:            Brainfuck compiler written in Haskell

license:             MIT
license-file:        LICENSE

build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  CHANGELOG.md, README.md

executable bfc
  main-is:             Main.hs
  other-modules:       Parser, IR, VM

  default-language:    Haskell2010
  -- other-extensions:    DeriveFunctor
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src

